# prompt-analyzer

./: .gitignore  README.md  pyproject.toml
src/prompt_analyzer/: main.py  tui.py
